# pulsetop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
pulsetop/pulsetop/: LICENSE  README.md
pulsetop/pulsetop/scripts/: screenshot.py
pulsetop/pulsetop/src/pulsetop/: __init__.py
pulsetop/pulsetop/src/pulsetop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pulsetop/pulsetop/src/pulsetop/widgets/: confirm_kill.py  cpu_panel.py  info_bar.py  mem_panel.py  net_panel.py  proc_panel.py
pulsetop/pulsetop/tests/: test_smoke.py
src/pulsetop/: app.py  system.py
src/pulsetop/widgets/: disk_panel.py
