[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsetop"
version = "0.1.0"
description = "A fast, good-looking terminal system monitor — CPU, memory, network, disk and processes, live."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Obakeng Mdonyelwa" }]
keywords = ["tui", "terminal", "system-monitor", "textual", "htop", "dashboard", "cli"]
classifiers = [
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.80.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/o-mdonyelwa/pulsetop"
Repository = "https://github.com/o-mdonyelwa/pulsetop"
Issues = "https://github.com/o-mdonyelwa/pulsetop/issues"

[project.scripts]
pulsetop = "pulsetop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
